--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,24 @@
         android:textSize="30sp"
         android:layout_alignBottom="@+id/button2"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="選選項"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="58dp"
+        android:id="@+id/button3"
+        android:onClick="click3" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button3"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView2"
+        android:textSize="30sp" />
 </RelativeLayout>
