--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,23 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2"
         android:textSize="30sp" />
+
+    <Button
+        android:text="選列表"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp"
+        android:id="@+id/button4"
+        android:onClick="click4" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView3"
+        android:textSize="30sp" />
 </RelativeLayout>
