--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,6 @@
         android:layout_alignBottom="@+id/button2"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="選選項"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="58dp"
-        android:id="@+id/button3"
-        android:onClick="click3" />
-
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
@@ -58,16 +47,6 @@
         android:id="@+id/textView2"
         android:textSize="30sp" />
 
-    <Button
-        android:text="選列表"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="39dp"
-        android:id="@+id/button4"
-        android:onClick="click4" />
-
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
@@ -76,4 +55,49 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/textView3"
         android:textSize="30sp" />
+
+    <Button
+        android:text="多選"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button4"
+        android:layout_alignStart="@+id/button3"
+        android:id="@+id/button3"
+        android:onClick="click5" />
+
+    <Button
+        android:text="選選項"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:onClick="click3"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="選列表"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:onClick="click4"
+        android:layout_below="@+id/button3"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textSize="30sp"
+        android:layout_alignBottom="@+id/button3"
+        android:layout_alignStart="@+id/textView3" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textSize="30sp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignStart="@+id/textView3" />
 </RelativeLayout>
