--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,4 +91,15 @@
         android:textSize="30sp"
         android:layout_below="@+id/textView3"
         android:layout_alignStart="@+id/textView3" />
+
+    <Button
+        android:text="自訂layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button6"
+        android:onClick="click6"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="55dp"
+        android:layout_below="@+id/button3"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
