--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button3"
+        android:layout_alignBottom="@+id/button5"
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2"
         android:textSize="30sp" />
@@ -61,15 +61,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button4"
-        android:layout_alignStart="@+id/button3"
-        android:id="@+id/button3"
+        android:layout_alignStart="@+id/button5"
+        android:id="@+id/button5"
         android:onClick="click5" />
 
     <Button
         android:text="選選項"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
+        android:id="@+id/button5"
         android:onClick="click3"
         android:layout_below="@+id/button2"
         android:layout_alignParentStart="true" />
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/button4"
         android:onClick="click4"
-        android:layout_below="@+id/button3"
+        android:layout_below="@+id/button5"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -96,10 +96,9 @@
         android:text="自訂layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button6"
+        android:id="@+id/button7"
         android:onClick="click6"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="55dp"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignEnd="@+id/textView4" />
 </RelativeLayout>
